crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__apply_transforms__apply_transforms-3.snap
---
source: crates/oxvg_optimiser/src/jobs/apply_transforms.rs
expression: "test_config(r#\"{ \"applyTransforms\": {}, \"convertPathData\": {} }\"#,\nSome(r##\"<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 500 500\">\n    <path transform=\"translate(250, 250) scale(1.5, 1.5) translate(-250, -250)\" fill=\"#7ED321\" stroke=\"#000\" stroke-width=\"15\" vector-effect=\"non-scaling-stroke\" d=\"M125 125h250v250h-250v-250z\"/>\n</svg>\"##))?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500">
    <path fill="#7ED321" stroke="#000" stroke-width="15" vector-effect="non-scaling-stroke" d="M62.5 62.5h375v375h-375Z"/>
</svg>
