crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__apply_transforms__apply_transforms-4.snap
---
source: crates/oxvg_optimiser/src/jobs/apply_transforms.rs
expression: "test_config(r#\"{ \"applyTransforms\": {}, \"convertPathData\": {} }\"#,\nSome(r#\"<svg width=\"480\" height=\"360\" xmlns=\"http://www.w3.org/2000/svg\">\n  <path transform=\"scale(1.8)\" stroke=\"black\" stroke-width=\"10\" fill=\"none\" stroke-dasharray=\"none\" d=\"   M  20 20   L  200 20\"/>\n  <path transform=\"scale(1.8)\" stroke=\"black\" stroke-width=\"10\" fill=\"none\" stroke-dasharray=\"0\" d=\"   M  20 40   L  200 40\"/>\n  <path transform=\"scale(1.8)\" stroke=\"black\" stroke-width=\"20\" fill=\"none\" stroke-dasharray=\"5,2,5,5,2,5\" d=\"   M  20 60   L  200 60\"/>\n  <path transform=\"scale(1.8)\" stroke=\"blue\" stroke-width=\"10\" fill=\"none\" stroke-dasharray=\"5,2,5\" d=\"   M  20 60   L  200 60\"/>\n  <path transform=\"scale(1.8)\" stroke=\"black\" stroke-width=\"10\" fill=\"none\" stroke-dasharray=\"2\" d=\"   M  20 80   L  200 80\"/>\n  <path transform=\"scale(1.8)\" stroke=\"blue\" stroke-width=\"10\" fill=\"none\" stroke-dasharray=\"2\" stroke-dashoffset=\"2\" d=\"         M  20 90   L  200 90\"/>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg" width="480" height="360">
  <path stroke="black" stroke-width="18" fill="none" stroke-dasharray="none" d="M36 36h324"></path>
  <path stroke="black" stroke-width="18" fill="none" stroke-dasharray="0" d="M36 72h324"></path>
  <path stroke="black" stroke-width="36" fill="none" stroke-dasharray="9 3.6 9 9 3.6 9" d="M36 108h324"></path>
  <path stroke="blue" stroke-width="18" fill="none" stroke-dasharray="9 3.6 9" d="M36 108h324"></path>
  <path stroke="black" stroke-width="18" fill="none" stroke-dasharray="3.6" d="M36 144h324"></path>
  <path stroke="blue" stroke-width="18" fill="none" stroke-dasharray="3.6" stroke-dashoffset="3.6px" d="M36 162h324"></path>
</svg>
