crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__apply_transforms__apply_transforms-6.snap
---
source: crates/oxvg_optimiser/src/jobs/apply_transforms.rs
expression: "test_config(r#\"{ \"applyTransforms\": {}, \"convertPathData\": {} }\"#,\nSome(r#\"<svg width=\"1200\" height=\"1200\">\n  <path transform=\"translate(100) scale(2)\" d=\"m200 200 h-100 a100 100 0 1 0 100 -100 z\"/>\n  <path transform=\"translate(100) scale(2)\" d=\"M400 200 H300 A100 100 0 1 0 400 100 z\"/>\n</svg>\"#))?"
---
<svg width="1200" height="1200">
    <path d="M500 400H300a200 200 0 1 0 200-200"/>
    <path d="M900 400H700a200 200 0 1 0 200-200"/>
</svg>
