crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__apply_transforms__apply_transforms.snap
---
source: crates/oxvg_optimiser/src/jobs/apply_transforms.rs
expression: "test_config(r#\"{ \"applyTransforms\": {}, \"convertPathData\": {} }\"#,\nSome(r##\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <path transform=\"translate(100,0)\" d=\"M0,0 V100 L 70,50 z M70,50 L140,0 V100 z\"/>\n    <path transform=\"\" d=\"M0,0 V100 L 70,50 z M70,50 L140,0 V100 z\"/>\n    <path fill=\"red\" transform=\"rotate(15) scale(.5) skewX(5) translate(200,100)\" d=\"M100,200 300,400 H100 V300 C100,100 250,100 250,200 S400,300 400,200 Q400,50 600,300 T1000,300 z\"/>\n    <path fill=\"red\" stroke=\"red\" transform=\"rotate(15) scale(.5) skewX(5) translate(200,100)\" d=\"M100,200 300,400 H100 V300 C100,100 250,100 250,200 S400,300 400,200 Q400,50 600,300 T1000,300 z\"/>\n    <path fill=\"red\" stroke=\"red\" transform=\"rotate(15) scale(.5) skewX(5) translate(200,100)\" d=\"M100,200 300,400 H100 V300 C100,100 250,100 250,200 S400,300 400,200 Q400,50 600,300 T1000,300 a150,150 0 1,0 150,-150 z\"/>\n    <path fill=\"red\" stroke=\"red\" transform=\"rotate(15) scale(.5) translate(200,100)\" d=\"M100,200 300,400 H100 V300 C100,100 250,100 250,200 S400,300 400,200 Q400,50 600,300 T1000,300 z\"/>\n    <path fill=\"red\" stroke=\"red\" transform=\"rotate(15) scale(1.5) translate(200,100)\" d=\"M100,200 300,400 H100 V300 C100,100 250,100 250,200 S400,300 400,200 Q400,50 600,300 T1000,300 z\"/>\n    <path fill=\"red\" stroke=\"red\" transform=\"rotate(15) scale(0.33) translate(200,100)\" d=\"M100,200 300,400 H100 V300 C100,100 250,100 250,200 S400,300 400,200 Q400,50 600,300 T1000,300 z\"/>\n    <g stroke=\"red\">\n        <path fill=\"red\" transform=\"rotate(15) scale(.5) translate(200,100)\" d=\"M100,200 300,400 H100 V300 C100,100 250,100 250,200 S400,300 400,200 Q400,50 600,300 T1000,300 z\"/>\n    </g>\n    <g stroke=\"red\" stroke-width=\"2\">\n        <path fill=\"red\" transform=\"rotate(15) scale(.5) translate(200,100)\" d=\"M100,200 300,400 H100 V300 C100,100 250,100 250,200 S400,300 400,200 Q400,50 600,300 T1000,300 z\"/>\n    </g>\n    <path transform=\"scale(10)\" id=\"a\" d=\"M0,0 V100 L 70,50 z M70,50 L140,0 V100 z\"/>\n    <path transform=\"scale(10)\" id=\"a\" d=\"M0,0 V100 L 70,50 z M70,50 L140,0 V100 z\" stroke=\"#000\"/>\n    <path transform=\"scale(10)\" id=\"a\" d=\"M0,0 V100 L 70,50 z M70,50 L140,0 V100 z\" stroke=\"#000\" stroke-width=\".5\"/>\n    <g stroke=\"#000\" stroke-width=\"5\">\n        <path transform=\"scale(10)\" id=\"a\" d=\"M0,0 V100 L 70,50 z M70,50 L140,0 V100 z\"/>\n    </g>\n    <path fill=\"url(#gradient)\" transform=\"rotate(15) scale(0.33) translate(200,100)\" d=\"M100,200 300,400 H100 V300 C100,100 250,100 250,200 S400,300 400,200 Q400,50 600,300 T1000,300 z\"/>\n    <path clip-path=\"url(#a)\" transform=\"rotate(15) scale(0.33) translate(200,100)\" d=\"M100,200 300,400 H100 V300 C100,100 250,100 250,200 S400,300 400,200 Q400,50 600,300 T1000,300 z\"/>\n    <path d=\"M5 0a10 10 0 1 0 20 0\" transform=\"matrix(1 0 0 1 5 0)\"/>\n    <path d=\"M5 0a10 10 0 1 0 20 0\" transform=\"rotate(15) scale(.8,1.2) \"/>\n    <path d=\"M5 0a10 10 0 1 0 20 0\" transform=\"rotate(45)\"/>\n    <path d=\"M5 0a10 10 0 1 0 20 0\" transform=\"skewX(45)\"/>\n    <path d=\"M0 300a1 2 0 1 0 200 0a1 2 0 1 0 -200 0\" transform=\"rotate(15 100 300) scale(.8 1.2)\"/>\n    <path d=\"M0 300a1 2 0 1 0 200 0a1 2 0 1 0 -200 0\" transform=\"rotate(15 100 300)\"/>\n    <path d=\"M700 300a1 2 0 1 0 200 0a1 2 0 1 0 -200 0\" transform=\"rotate(-75 700 300) scale(.8 1.2)\"/>\n    <path d=\"M12.6 8.6l-3.1-3.2-3.1 3.2-.8-.7 3.9-3.9 3.9 3.9zM9 5h1v10h-1z\" transform=\"rotate(-90 9.5 9.5)\"/>\n    <path d=\"M637.43 482.753a43.516 94.083 0 1 1-87.033 0 43.516 94.083 0 1 1 87.032 0z\" transform=\"matrix(1.081 .234 -.187 .993 -37.573 -235.766)\"/>\n    <path d=\"m-1.26-1.4a6.53 1.8-15.2 1 1 12.55-3.44\" transform=\"translate(0, 0)\"/>\n    <path d=\"M0 0c.07 1.33.14 2.66.21 3.99.07 1.33.14 2.66.21 3.99\"/>\n</svg>\"##))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <path d="M100 0v100l70-50Zm70 50 70-50v100Z"/>
    <path transform="" d="M0 0v100l70-50Zm70 50 70-50v100Z"/>
    <path fill="red" d="m118.742 187.108 79.161 124.739-96.593-25.882 8.716-49.428c17.431-98.857 89.876-79.446 81.16-30.017s63.729 68.84 72.444 19.411q13.073-74.143 87.877 75.31t193.185 51.764Z"/>
    <path fill="red" stroke="red" transform="rotate(15)scale(.5)skewX(5)translate(200 100)" d="m100 200 200 200H100V300c0-200 150-200 150-100s150 100 150 0q0-150 200 100t400 0Z"/>
    <path fill="red" stroke="red" transform="rotate(15)scale(.5)skewX(5)translate(200 100)" d="m100 200 200 200H100V300c0-200 150-200 150-100s150 100 150 0q0-150 200 100t400 0a150 150 0 1 0 150-150Z"/>
    <path fill="red" stroke="red" d="m106.066 183.712 70.711 122.474-96.593-25.882 12.941-48.296c25.882-96.593 98.326-77.181 85.385-28.885s59.503 67.708 72.444 19.411q19.411-72.444 83.652 74.178t193.185 51.764Z" stroke-width=".5"/>
    <path fill="red" stroke="red" d="M318.198 551.135 530.33 918.559 240.552 840.913l38.823-144.889c77.646-289.778 294.979-231.543 256.156-86.655s178.51 203.123 217.333 58.234q58.234-217.333 250.955 222.535t579.556 155.291Z" stroke-width="1.5"/>
    <path fill="red" stroke="red" d="m70.004 121.25 46.669 80.833-63.751-17.082 8.541-31.876c17.082-63.751 64.895-50.94 56.354-19.064s39.272 44.687 47.813 12.812q12.812-47.813 55.21 48.958t127.502 34.164Z" stroke-width=".33"/>
    <g stroke="red">
        <path fill="red" d="m106.066 183.712 70.711 122.474-96.593-25.882 12.941-48.296c25.882-96.593 98.326-77.181 85.385-28.885s59.503 67.708 72.444 19.411q19.411-72.444 83.652 74.178t193.185 51.764Z" stroke-width=".5"/>
    </g>
    <g stroke="red" stroke-width="2">
        <path fill="red" d="m106.066 183.712 70.711 122.474-96.593-25.882 12.941-48.296c25.882-96.593 98.326-77.181 85.385-28.885s59.503 67.708 72.444 19.411q19.411-72.444 83.652 74.178t193.185 51.764Z" stroke-width="1"/>
    </g>
    <path transform="scale(10)" id="a" d="M0 0v100l70-50Zm70 50 70-50v100Z"/>
    <path transform="scale(10)" id="a" d="M0 0v100l70-50Zm70 50 70-50v100Z" stroke="#000"/>
    <path transform="scale(10)" id="a" d="M0 0v100l70-50Zm70 50 70-50v100Z" stroke="#000" stroke-width=".5"/>
    <g stroke="#000" stroke-width="5">
        <path transform="scale(10)" id="a" d="M0 0v100l70-50Zm70 50 70-50v100Z"/>
    </g>
    <path fill="url(#gradient)" transform="rotate(15)scale(.33)translate(200 100)" d="m100 200 200 200H100V300c0-200 150-200 150-100s150 100 150 0q0-150 200 100t400 0Z"/>
    <path clip-path="url(#a)" transform="rotate(15)scale(.33)translate(200 100)" d="m100 200 200 200H100V300c0-200 150-200 150-100s150 100 150 0q0-150 200 100t400 0Z"/>
    <path d="M10 0a1 1 0 0 0 20 0"/>
    <path d="M3.864 1.035a2 3 15 1 0 15.455 4.141"/>
    <path d="M3.536 3.536a1 1 0 1 0 14.142 14.142"/>
    <path d="M5 0a12.641 4.828 31.717 1 0 20 0"/>
    <path d="M-12.122 332.074a1 3 15 0 0 154.548 41.411 1 3 15 0 0-154.548-41.411Z"/>
    <path d="M3.407 274.118a1 2 15 0 0 193.185 51.764A1 2 15 0 0 3.407 274.118Z"/>
    <path d="M721.721 450.759a3 1 15 0 0 41.411-154.548 3 1 15 0 0-41.411 154.548Z"/>
    <path d="M8.6 6.4 5.4 9.5l3.2 3.1-.7.8L4 9.5 7.9 5.6ZM5 10V9h10v1Z"/>
    <path d="M561.214 392.766a46.98 92.851 10.132 0 1-94.083-20.366 48.107 95.08 10.132 0 1 94.082 20.365Z"/>
    <path d="M-1.26-1.4a6.53 1.8-15.2 1 1 12.55-3.44"/>
    <path d="m0 0 .42 7.98"/>
</svg>
